finish about page

--- a/src/about.html
+++ b/src/about.html
@@ -35,28 +35,32 @@
                 <div class="flex place-content-center w-full">
                     <div class="flex place-content-center w-[64rem] h-[40rem]">
                         <div class="embla w-full h-full relative">
+                            
                             <div class="embla__viewport overflow-hidden h-full absolute">
                                 <div class="embla__container flex h-full">
                                     <div class="flex-100 min-w-0 relative">
-                                        <img class="block w-full h-full object-cover absolute" src="../src/images/aboutCarousel/1.jpg"/>
-                                        <span class="absolute right-0 top-0">
-                                            <span class="z-20 text-slate-50 text-xl font-mono mr-2 font-semibold relative">Liam's Angry Cat</span>
-                                            <span class="z-10 block absolute bg-gradient-to-l from-main-dark/70 via-main-light/70 inset-y-0 -left-10 right-0"></span>
-                                        </span>
+                                        <img class="block w-full h-full object-contain absolute" src="../src/images/aboutCarousel/1.jpg"/>
                                     </div>
                                     <div class="flex-100 min-w-0 relative">
-                                        <img class="block w-full h-full object-cover absolute" src="../src/images/aboutCarousel/2.jpg"/>
-                                        <span class="absolute right-0 top-0">
-                                            <span class="z-20 text-slate-50 text-xl font-mono mr-2 font-semibold relative">Dogs > Cats</span>
-                                            <span class="z-10 block absolute bg-gradient-to-l from-main-dark/70 via-main-light/70 inset-y-0 -left-10 right-0"></span>
-                                        </span>
+                                        <img class="block w-full h-full object-contain absolute" src="../src/images/aboutCarousel/2.jpg"/>
                                     </div>
                                     <div class="flex-100 min-w-0 relative">
-                                        <img class="block w-full h-full object-cover" src="../src/images/aboutCarousel/3.jpg"/>
-                                        <span class="absolute right-0 top-0">
-                                            <span class="z-20 text-slate-50 text-xl font-mono mr-2 font-semibold relative">Not This One Though, She's Stupid</span>
-                                            <span class="z-10 block absolute bg-gradient-to-l from-main-dark/70 via-main-light/70 inset-y-0 -left-10 right-0"></span>
-                                        </span>
+                                        <img class="block w-full h-full object-contain" src="../src/images/aboutCarousel/3.jpg"/>
+                                    </div>
+                                    <div class="flex-100 min-w-0 relative">
+                                        <img class="block w-full h-full object-contain absolute" src="../src/images/aboutCarousel/4.jpg"/>
+                                    </div>
+                                    <div class="flex-100 min-w-0 relative">
+                                        <img class="block w-full h-full object-contain absolute" src="../src/images/aboutCarousel/5.jpg"/>
+                                    </div>
+                                    <div class="flex-100 min-w-0 relative">
+                                        <img class="block w-full h-full object-contain" src="../src/images/aboutCarousel/6.jpg"/>
+                                    </div>
+                                    <div class="flex-100 min-w-0 relative">
+                                        <img class="block w-full h-full object-contain" src="../src/images/aboutCarousel/7.jpg"/>
+                                    </div>
+                                    <div class="flex-100 min-w-0 relative">
+                                        <img class="block w-full h-full object-contain" src="../src/images/aboutCarousel/8.jpg"/>
                                     </div>
                                 </div>
                             </div>
@@ -115,23 +119,23 @@
 
                 <div class="h-nav"></div>
 
-                <div class="about-header" about-left about-title="C O D E" about-color="red"></div>
+                <div class="about-header" about-left about-title="O U T R E A C H" about-color="fuchsia"></div>
 
-                <div class="about-member" about-right about-title="DANNY KOLDOBSKIY" about-src="../src/images/headshots/danny.jpg" about-color="red" about-desc="I enjoy programming and designing STEM lessons and activities. I'm passionate about STEM education and Artificial Intelligence, but above all I love Civilization 6- I have over 6k hours!"></div>
-                <div class="about-member" about-left about-title="LIAM RIVERS" about-src="../src/images/headshots/liam.jpg" about-color="red" about-desc="I love to program and chill with my (very angry) cat. In my free time, I also sail."></div>
-                <div class="about-member" about-right about-title="LEO WANG" about-src="../src/images/headshots/leo.jpg" about-color="red" about-desc="I'm passionate about simulations and enjoy designing robots and strategies around new games each year. I have been resigned to Website Team :("></div>
+                <div class="about-member" about-right about-title="ZENAIDA ROWE" about-src="../src/images/headshots/zenaida.jpg" about-color="fuchsia" about-desc="I'm passionate about STEM education and how we can work to improve it. This year I'm hoping to apply our robotic's team's resources and knowledge to STEM outreach."></div>
+                <div class="about-member" about-left about-title="REEMA AYACHE" about-src="../src/images/headshots/reema.jpg" about-color="fuchsia" about-desc="I am passionate about STEM and using art to help promote and diversify STEM outreach. I created the logo for the team and am active in a wide variety of STEM activities."></div>
+                <div class="about-member" about-right about-title="ABE KARIKKINETH" about-src="../src/images/headshots/abe.jpg" about-color="fuchsia" about-desc="I enjoy math and am currently working on a personality."></div>
+                <div class="about-member" about-left about-title="ARYA KAZEMNIA" about-src="../src/images/headshots/arya.jpg" about-color="fuchsia" about-desc="I love making Tik-Toks and helping build our robot. I also enjoy all things space related, especially learning about different satellites."></div>
 
                 <div class="about-header" about-right about-title="C A D" about-color="sky"></div>
 
                 <div class="about-member" about-left about-title="JERRY HUANG" about-src="../src/images/headshots/jerry.jpg" about-color="sky" about-desc="I'm fascinated by Computer Aided Design and its applications. When not doing robotics, I run with the cross country team and overuse discord."></div>
                 <div class="about-member" about-right about-title="AMAN GARG" about-src="../src/images/headshots/aman.jpg" about-color="sky" about-desc="I love 3d printing and all things related to that. In my free time, I play with my dog and criticize cats."></div>
 
-                <div class="about-header" about-left about-title="O U T R E A C H" about-color="fuchsia"></div>
+                <div class="about-header" about-left about-title="C O D E" about-color="red"></div>
 
-                <div class="about-member" about-right about-title="ZENAIDA ROWE" about-src="../src/images/headshots/zenaida.jpg" about-color="fuchsia" about-desc="I'm passionate about STEM education and how we can work to improve it. This year I'm hoping to apply our robotic's team's resources and knowledge to STEM outreach."></div>
-                <div class="about-member" about-left about-title="REEMA LAST" about-src="../src/images/headshots/arya.jpg" about-color="fuchsia" about-desc="I enjoy animation and art. I love robotics and the way FTC combines design and art with engineering challenges."></div>
-                <div class="about-member" about-right about-title="ABRAHAM KARIKKINETH" about-src="../src/images/headshots/abe.jpg" about-color="fuchsia" about-desc="I enjoy math and am currently working on a personality."></div>
-                <div class="about-member" about-left about-title="ARYA KAZEMNIA" about-src="../src/images/headshots/arya.jpg" about-color="fuchsia" about-desc="I love making Tik-Toks and helping build our robot. I also enjoy all things space related, especially learning about different satellites."></div>
+                <div class="about-member" about-right about-title="DANNY KOLDOBSKIY" about-src="../src/images/headshots/danny.jpg" about-color="red" about-desc="I enjoy programming and designing STEM lessons and activities. I'm passionate about STEM education and Artificial Intelligence, but above all I love Civilization 6- I have over 6k hours!"></div>
+                <div class="about-member" about-left about-title="LIAM RIVERS" about-src="../src/images/headshots/liam.jpg" about-color="red" about-desc="I love to program and chill with my (very angry) cat. In my free time, I also sail."></div>
+                <div class="about-member" about-right about-title="LEO WANG" about-src="../src/images/headshots/leo.jpg" about-color="red" about-desc="I'm passionate about simulations and enjoy designing robots and strategies around new games each year. I have been resigned to Website Team :("></div>
 
                 <div class="about-header" about-middle about-title="M E N T O R S" about-color="purple"></div>
 
