--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!--npx tailwindcss -i ./src/index.css -o ./dist/output.css --watch-->
 <!doctype html>
 <html>
 <head>
@@ -34,17 +35,7 @@
                     </div>
                 </div>
                 <div class="h-[1vh]"></div>
-                <img src="../src/icons/png/logoFull.png" class="relative z-10 h-[46vh] max-h-[45rem] min-h-[20rem] ml-auto mr-auto">
-
-                <!-- SPONSORS -->
-                <div class="z-10 absolute bottom-0 w-screen">
-                    <div class="flex justify-center items-center w-screen gap-x-4">
-                        <img src="../src/icons/sponsors/amazon-line.png" class="w-16 h-16">
-                        <img src="../src/icons/sponsors/apple-fill.png" class="w-16 h-16">
-                        <img src="../src/icons/sponsors/github-fill.png" class="w-16 h-16">
-                    </div>
-                    <div class="h-32"></div>
-                </div>
+                <img src="../src/icons/png/logoNoBgFull.png" class="relative z-10 h-[46vh] max-h-[45rem] min-h-[20rem] ml-auto mr-auto">
 
                 <!-- BOTTOM ARROW -->
                 <div class="z-10 absolute bottom-0 w-screen">
